# prison-dilemma-agents

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
src/prison_dilemma_agents/: app.py  crew.py  main.py
src/prison_dilemma_agents/config/: agents.yaml  tasks.yaml
src/prison_dilemma_agents/game/: engine.py  models.py  simple_strategies.py
src/prison_dilemma_agents/players/: player.py
src/prison_dilemma_agents/ui/: gradio_app.py
tests/: test_models.py
